erDiagram

    %% Relationships
    users ||--o{ transactions : has
    users ||--o{ sessions : creates
    users ||--|| portfolio : owns
    portfolio ||--o{ accounts : contains
    accounts ||--o{ transactions : performs
    stocks ||--o{ transactions : involves

    %% Tables

    users {
        INTEGER id PK
        TEXT email
        TEXT password_hash
        TEXT first_name
        TEXT last_name
        TEXT image
        DATETIME created_at
    }

    portfolio {
      INTEGER id PK
      INTEGER user_id FK "REFERENCES users(id) ON DELETE CASCADE"
      TEXT symbol
      INTEGER quantity
      REAL average_price
      DATETIME created_at
      DATETIME updated_at
    }

    accounts {
      INTEGER id PK
      INTEGER user_id FK "REFERENCES users(id) ON DELETE CASCADE"
      REAL cash_balance
      DATETIME created_at
      DATETIME updated_at
    }

    sessions {
        INTEGER id PK
        INTEGER user_id FK "REFERENCES users(id)"
        DATETIME expires_at
        DATETIME created_at
    }

    stocks {
        INTEGER id PK
        TEXT ticker "UNIQUE"
        TEXT company_name
        REAL last_price
        DATETIME updated_at
    }

  transactions {
      INTEGER id PK
      INTEGER user_id FK "REFERENCES users(id) ON DELETE CASCADE"
      TEXT symbol
      INTEGER quantity   
      REAL price
      TEXT type      
      DATETIME created_at
  }
